[package]
name = "tower_oops"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.6", features = ["v4_6"] }
glib = "0.17"
gdk-pixbuf = "0.17"
cairo-rs = { version = "0.17", features = ["png"] }
rand = "0.8"
resvg = "0.46"
tiny-skia = "0.11"
fluent-bundle = "0.15"
fluent-syntax = "0.11"
intl-memoizer = "0.5"
sys-locale = "0.3"
unic-langid = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "4.0"
